2010-05-11 j.m.reneau <renejm@users.sourceforge.net> 0.9.6e

	* Added statements to BASIC256.pro file so qmake would make the "make install" for linux to ease build

2009-11-05 j.m.reneau <renejm@users.sourceforge.net> 0.9.3o

	* added STAMP to draw a scaled poly at a position on the graphics display - sort of a simple sprite
	* added TRUE and FALSE boolean constant values
	* corrected problem with x&y reversing when an indirect list was defined for a POLY
	* removed the unused number of points from the syntax of POLY

2009-11-04 j.m.reneau <renejm@users.sourceforge.net> 0.9.3n

	* added SIZE, EXISTS, and SEEK for use during file IO

2009-11-02 j.m.reneau <renejm@users.sourceforge.net> 0.9.3m

	* rewrite popint/popfloat/popstring in interperter.cpp to return type not a stack value

2009-11-01 j.m.reneau <renejm@users.sourceforge.net> 0.9.3l

	* added alternate syntax of input statement to allow a numeric variable or array.  If non numeric
	  data is entered a zero will be stored in the variable
	* added logic to allow for < > <= >= comparisons of strings

2009-10-31 j.m.reneau <renejm@users.sourceforge.net> 0.9.3k

	* added WAVPLAY and WAVSTOP commands to asynchronously play a wav audio file and to stop it

2009-10-29 j.m.reneau <renejm@users.sourceforge.net> 0.9.3j

	* added GRAPHHEIGHT and GRAPHIDTH to return the size of the graphics window
	* worked on the HTML documentation, added GRAPHSIZE, GRAPHWIDTH, and GRAPHHEIGHT
	
2009-10-28 j.m.reneau <renejm@users.sourceforge.net> 0.9.3.i
	* worked my prior changes into the trunk

2009-10-26 j.m.reneau <renejm@users.sourceforge.net> 0.9.3h

	* changed say statement to allow for same arguments (float and string) as print
	* changes say to use espeak without a direct path to the exe file.   requires espeak in path on windows
	

2008-09-23 <renejm@users.sourceforge.net> 0.9.3g

	* added SAY ststement to call locally installed espeak to tts string - need to re-write for linux and would like to see it use the espeak lib
